2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* work.cc (workspace::perform_additions,
	workspace::perform_deletions): Update to deal with multi-parent
	workspaces.
	* tests/two_parent_workspace_add_drop: New test.
	* testsuite.lua: Add it.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* cmd_ws_commit.cc (attr): Work in a two-parent workspace.
	* tests/two_parent_workspace_attrs: New test.
	* tests/two_parent_workspace_pluck: Make sure we can commit the
	result of our manipulations.

	* automate.cc (inventory, get_base_revision_id): Fail gracefully
	in a two-parent workspace.
	(get_current_revision_id, get_manifest_of): Work in a two-parent
	workspace.
	* tests/merge_into_workspace: Test new behavior of automate
	get_current_revision_id and get_manifest-of.
	* tests/two_parent_workspace_commands_that_fail: Un-xfail.

	* tests/merge_into_workspace_files_added: Fix for workspace conflicts.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(pluck)): Migrate to new internal
	multi-parent workspace API.
	* tests/two_parent_workspace_pluck: Un-xfail test.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* cmd_diff_log.cc (prepare_diff): Handle multi-parent workspaces
	gracefully.
	* cmd_merging.cc (update): Likewise.
	* cmd_ws_commit.cc (revert): Likewise.

	* tests/two_parent_workspace_commands_that_fail
	* tests/two_parent_workspace_pluck: New tests (expected to fail).
	* testsuite.lua: Add them.
	* cmd_merging.cc (merge_into_workspace): Standardize a diagnostic.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(merge_into_workspace)): N() out if user is
	trying to merge in the workspace's current revision.
	* tests/merge_into_workspace_same_rev/*: New test.
	* testsuite.lua: Add it.

2006-09-25  Zack Weinberg  <zackw@panix.com>

	* work.cc (workspace::get_work_rev): Fold into sole caller,
	get_base_and_current_roster_shape.
	* work.hh: Don't declare get_work_rev.

2006-09-21  Zack Weinberg  <zackw@panix.com>
