@@ -712,5 +712,5 @@ table.insert(tests, "merge_into_workspace_attr_corpse")
 table.insert(tests, "merge_into_workspace_same_rev")
 table.insert(tests, "two_parent_workspace_commands_that_fail")
 table.insert(tests, "two_parent_workspace_pluck")
-table.insert(tests, "two_parent_workspace_add_drop")
+table.insert(tests, "two_parent_workspace_add_drop_rename")
 table.insert(tests, "two_parent_workspace_attrs")
