@@ -1,3 +1,11 @@
+2007-02-07  Zack Weinberg  <zackw@panix.com>
+
+	* work.cc (perform_rename): Work in a two-parent workspace.
+	* tests/two_parent_workspace_add_drop: Rename to...
+	* tests/two_parent_workspace_add_drop_rename: ... this.
+	Add testing of renames.
+	* testsuite.lua: Update.
+
 2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* work.cc (workspace::perform_additions,
